2013-07-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/include/style/images/*,
	mobile/include/style/jquery.mobile-1.3.1.css,
	mobile/include/javascript/jquery.js, 
	mobile/include/javascript/jquery.mobile-1.3.1.js: added the
	jquery mobile, and made some changes in the css.
	
	* mobile/include/style/main.css, mobile/operation/agents.php,
	mobile/include/ui.class.php: some fixes.

2013-07-04 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_graph.php: fixed include javascript in the
	static image for boolean module graph.
	
	* mobile/operation/alerts.php, mobile/operation/agent.php,
	mobile/operation/events.php,
	mobile/operation/module_graph.php,
	mobile/operation/modules.php,
	mobile/operation/networkmaps.php,
	mobile/operation/groups.php,
	mobile/operation/agents.php,
	mobile/operation/tactical.php,
	mobile/operation/networkmap.php,
	mobile/include/style/main.css,
	mobile/include/ui.class.php: a lot of fixes in mobile.

2013-07-03 Miguel de Dios <miguel.dedios@artica.es>

	* mobile/operation/events.php, mobile/operation/module_graph.php,
	mobile/operation/modules.php, mobile/operation/networkmaps.php,
	mobile/operation/groups.php, mobile/operation/agents.php,
	mobile/operation/tactical.php, mobile/operation/networkmap.php,
	mobile/operation/alerts.php, mobile/operation/agent.php,
	mobile/include/ui.class.php: added the back button in the head and
	impoved the source code style to make more easy the merges with
	the trunk.
	
	* include/functions_graph.php: fixed PHP notices.

2013-07-03 Miguel de Dios <miguel.dedios@artica.es>

	* mobile/include/style/main.css: some fix for the module list
	when it is embedded in agent view, now it is show in Android but
	I need work more for to show in the jobs fashion gadget.
	
	* mobile/operation/networkmaps.php: fixed to avoid
	unused the javascript for mobile.

2013-07-03 Miguel de Dios <miguel.dedios@artica.es>

	* include/graphs/fgraph.php, mobile/operation/agent.php: change