@@ -1,3 +1,9 @@
+2013-07-05 Hirofumi Kosaka <kosaka@rworks.jp>
+
+	* godmode/alerts/alert_list.builder.php: When creating new
+	alert, wrong action might be assigned to the alert (if you had
+	some deleted actions in the past).
+
 2013-07-04 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* mobile/include/style/images/*,
